--- a/designs.html
+++ b/designs.html
@@ -5,7 +5,7 @@
     type="image/png"
     href="images/Personal Website-Advance Logo.png"
   />
-  <title>Showcase | Leonel Esguerra</title>
+  <title>Designs | Leonel Esguerra</title>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="description" content="Leonel Esguerra" />
@@ -59,7 +59,7 @@
     </div>
 
     <div class="header-nav-showcase slide">
-      <h1>Showcase</h1>
+      <h1>Designs</h1>
     </div>
 
     <div>
@@ -74,22 +74,12 @@
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
-            <a href="http://e-commerce.jemshop.cf/" target="_blank">
-              <img src="images/jemshop.png" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="js-scroll fade-in-bottom">
-            <a href="http://nhelez.me/" target="_blank">
-              <img src="images/advance-website.png" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="js-scroll fade-in-bottom">
-            <a href="dmis.html">
+            <a href="https://www.figma.com/community/file/1114921249053475523">
               <img src="images/dmis.png" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
-            <a href="rdro.html">
+            <a href="https://www.figma.com/community/file/1069145923032887684">
               <img src="images/rdro.png" alt="" class="zoom" />
             </a>
           </li>
@@ -115,19 +105,6 @@
               target="_blank"
             >
               <img src="images/neon-music-player.png" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="js-scroll fade-in-bottom">
-            <a
-              href="https://nhelez.me/The-Chilay-s-Pizza/index.html"
-              target="_blank"
-            >
-              <img src="images/the-chilays-pizza.png" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="js-scroll fade-in-bottom">
-            <a href="https://nhelez.me/TheLeoCars/index.html" target="_blank">
-              <img src="images/the-leo-cars.png" alt="" class="zoom" />
             </a>
           </li>
         </div>
