--- a/development.html
+++ b/development.html
@@ -5,7 +5,7 @@
     type="image/png"
     href="images/Personal Website-Advance Logo.png"
   />
-  <title>Showcase | Leonel Esguerra</title>
+  <title>Development | Leonel Esguerra</title>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="description" content="Leonel Esguerra" />
@@ -59,20 +59,12 @@
     </div>
 
     <div class="header-nav-showcase slide">
-      <h1>Showcase</h1>
+      <h1>Development</h1>
     </div>
 
     <div>
       <center>
         <div class="img1 slide">
-          <li class="js-scroll fade-in-bottom">
-            <a
-              href="https://www.figma.com/community/file/1131172600454512315"
-              target="_blank"
-            >
-              <img src="images/tiktok-mockup.png" alt="" class="zoom" />
-            </a>
-          </li>
           <li class="js-scroll fade-in-bottom">
             <a href="http://e-commerce.jemshop.cf/" target="_blank">
               <img src="images/jemshop.png" alt="" class="zoom" />
@@ -91,30 +83,6 @@
           <li class="js-scroll fade-in-bottom">
             <a href="rdro.html">
               <img src="images/rdro.png" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="js-scroll fade-in-bottom">
-            <a
-              href="https://www.figma.com/community/file/1069146567302323589"
-              target="_blank"
-            >
-              <img src="images/violet-website.png" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="js-scroll fade-in-bottom">
-            <a
-              href="https://www.figma.com/community/file/1070261686949293814"
-              target="_blank"
-            >
-              <img src="images/calculator.png" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="js-scroll fade-in-bottom">
-            <a
-              href="https://www.figma.com/community/file/1071003083430970406"
-              target="_blank"
-            >
-              <img src="images/neon-music-player.png" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
