--- a/dmis.html
+++ b/dmis.html
@@ -35,7 +35,9 @@
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="show-case.html">Showcase</a>
-            <a href="case-study.html">Case Studies</a>
+            <a href="designs.html">Designs</a>
+            <a href="development.html">Development</a>
+            <a href="case-study.html">Case Study</a>
           </div>
         </div>
 
