--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="show-case.html">Showcase</a>
-            <a href="case-study.html">Case Studies</a>
+            <a href="designs.html">Designs</a>
+            <a href="development.html">Development</a>
+            <a href="case-study.html">Case Study</a>
           </div>
         </div>
 
@@ -137,6 +139,75 @@
         client-side/server-side scripting and network security configuration,
         among other tasks.<br /><br />
       </p>
+
+      <div class="design">
+        <h4 style="color: white">My Designs</h4>
+        <div class="design-img">
+          <li>
+            <img src="images/tiktok-mockup.png" alt="" />
+          </li>
+          <li>
+            <img src="images/dmis.png" alt="" />
+          </li>
+          <li>
+            <img src="images/rdro.png" alt="" />
+          </li>
+          <li class="see-more">
+            <a href="designs.html">
+              <img
+                src="images/see-more.png"
+                style="border: 1px solid white"
+                alt=""
+              />
+            </a>
+          </li>
+        </div>
+      </div>
+
+      <div class="design">
+        <h4 style="color: white">My Development Project</h4>
+        <div class="design-img">
+          <li>
+            <img src="images/jemshop.png" alt="" />
+          </li>
+          <li>
+            <img src="images/advance-website.png" alt="" />
+          </li>
+          <li>
+            <img src="images/dmis.png" alt="" />
+          </li>
+          <li class="see-more">
+            <a href="development.html">
+              <img
+                src="images/see-more.png"
+                style="border: 1px solid white"
+                alt=""
+              />
+            </a>
+          </li>
+        </div>
+      </div>
+
+      <div class="design">
+        <h4 style="color: white">Case Studies</h4>
+        <div class="design-img">
+          <li>
+            <img src="images/dmis.png" alt="" />
+          </li>
+          <li>
+            <img src="images/rdro.png" alt="" />
+          </li>
+          <li class="see-more">
+            <a href="case-study.html">
+              <img
+                src="images/see-more.png"
+                style="border: 1px solid white"
+                alt=""
+              />
+            </a>
+          </li>
+        </div>
+      </div>
 
       <div class="footer slide">
         <center>
