--- a/designs.html
+++ b/designs.html
@@ -66,6 +66,11 @@
       <center>
         <div class="img1 slide">
           <li class="js-scroll fade-in-bottom">
+            <a href="" target="_blank">
+              <img src="images/jemshop-app.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
             <a
               href="https://www.figma.com/community/file/1131172600454512315"
               target="_blank"
