--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
       <center>
         <div class="img1">
           <li class="slide js-scroll fade-in-bottom">
+            <a href="" target="_blank">
+              <img src="images/jemshop-app.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="slide js-scroll fade-in-bottom">
             <a
               href="https://www.figma.com/community/file/1131172600454512315"
               target="_blank"
@@ -77,11 +82,6 @@
           <li class="slide js-scroll fade-in-bottom">
             <a href="http://e-commerce.jemshop.cf/" target="_blank">
               <img src="images/jemshop.png" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="slide js-scroll fade-in-bottom">
-            <a href="http://nhelez.me/" target="_blank">
-              <img src="images/advance-website.png" alt="" class="zoom" />
             </a>
           </li>
           <div class="slide js-scroll fade-in">
@@ -144,13 +144,13 @@
         <h4 style="color: white">My Designs</h4>
         <div class="design-img">
           <li>
+            <img src="images/jemshop-app.png" alt="" />
+          </li>
+          <li>
             <img src="images/tiktok-mockup.png" alt="" />
           </li>
           <li>
             <img src="images/dmis.png" alt="" />
-          </li>
-          <li>
-            <img src="images/rdro.png" alt="" />
           </li>
           <li class="see-more">
             <a href="designs.html">
