--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
       <center>
         <div class="img1">
           <li class="slide js-scroll fade-in-bottom">
-            <a href="" target="_blank">
+            <a
+              href="https://www.figma.com/community/file/1132532791931287238"
+              target="_blank"
+            >
               <img src="images/jemshop-app.png" alt="" class="zoom" />
             </a>
           </li>
