--- a/designs.html
+++ b/designs.html
@@ -67,6 +67,14 @@
         <div class="img1 slide">
           <li class="js-scroll fade-in-bottom">
             <a
+              href="https://www.figma.com/community/file/1133255596325295185"
+              target="_blank"
+            >
+              <img src="images/nft-web.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
+            <a
               href="https://www.figma.com/community/file/1132532791931287238"
               target="_blank"
             >
