--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
         <div class="img1">
           <li class="slide js-scroll fade-in-bottom">
             <a
+              href="https://www.figma.com/community/file/1133255596325295185"
+              target="_blank"
+            >
+              <img src="images/nft-web.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="slide js-scroll fade-in-bottom">
+            <a
               href="https://www.figma.com/community/file/1132532791931287238"
               target="_blank"
             >
@@ -80,11 +88,6 @@
               target="_blank"
             >
               <img src="images/tiktok-mockup.png" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="slide js-scroll fade-in-bottom">
-            <a href="http://e-commerce.jemshop.cf/" target="_blank">
-              <img src="images/jemshop.png" alt="" class="zoom" />
             </a>
           </li>
           <div class="slide js-scroll fade-in">
@@ -147,13 +150,13 @@
         <h4 style="color: white">My Designs</h4>
         <div class="design-img">
           <li>
+            <img src="images/nft-web.png" alt="" />
+          </li>
+          <li>
             <img src="images/jemshop-app.png" alt="" />
           </li>
           <li>
             <img src="images/tiktok-mockup.png" alt="" />
-          </li>
-          <li>
-            <img src="images/dmis.png" alt="" />
           </li>
           <li class="see-more">
             <a href="designs.html">
