--- a/about.html
+++ b/about.html
@@ -82,8 +82,7 @@
           development of websites and system and practice my skill in the
           industry.<br /><br />
           In my early experience as an On-The-Job Trainee when I am Senior High
-          School and College and also working as a production operator in a
-          company, I was involved in communicating with different people,
+          School and College and, I was involved in communicating with different people,
           answering calls, accomplishing tasks, working with the team, and work
           independently. In my experience as an On-The-Job Trainee at
           DOST-FPRDI, I was assigned a role as a Frontend Developer. I am
