--- a/about.html
+++ b/about.html
@@ -82,9 +82,9 @@
           development of websites and system and practice my skill in the
           industry.<br /><br />
           In my early experience as an On-The-Job Trainee when I am Senior High
-          School and College and, I was involved in communicating with different people,
-          answering calls, accomplishing tasks, working with the team, and work
-          independently. In my experience as an On-The-Job Trainee at
+          School and College and, I was involved in communicating with different
+          people, answering calls, accomplishing tasks, working with the team,
+          and work independently. In my experience as an On-The-Job Trainee at
           DOST-FPRDI, I was assigned a role as a Frontend Developer. I am
           responsible for designing and developing the user interface (UI) of
           the system and preparing technical documentation. Being an OJT, I was
