--- a/show-case.html
+++ b/show-case.html
@@ -135,14 +135,14 @@
           </li>
           <li class="js-scroll fade-in-bottom">
             <a
-              href="https://nhelez.me/The-Chilay-s-Pizza/index.html"
+              href="https://nhel-ez.github.io/The-Chilay-s-Pizza/index.html"
               target="_blank"
             >
               <img src="images/the-chilays-pizza.png" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
-            <a href="https://nhelez.me/TheLeoCars/index.html" target="_blank">
+            <a href="https://nhel-ez.github.io/TheLeoCars/index.html" target="_blank">
               <img src="images/the-leo-cars.png" alt="" class="zoom" />
             </a>
           </li>
