--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
         <div class="img1">
           <li class="slide js-scroll fade-in-bottom">
             <a
+              href="https://www.figma.com/community/file/1142313214246633640"
+              target="_blank"
+            >
+              <img src="images/e-poultry.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="slide js-scroll fade-in-bottom">
+            <a
               href="https://www.figma.com/community/file/1133255596325295185"
               target="_blank"
             >
@@ -82,14 +90,7 @@
               <img src="images/jemshop-app.png" alt="" class="zoom" />
             </a>
           </li>
-          <li class="slide js-scroll fade-in-bottom">
-            <a
-              href="https://www.figma.com/community/file/1131172600454512315"
-              target="_blank"
-            >
-              <img src="images/tiktok-mockup.png" alt="" class="zoom" />
-            </a>
-          </li>
+
           <div class="slide js-scroll fade-in">
             <a href="show-case.html" style="text-decoration: none">
               <button class="btn-grad">View All</button>
@@ -150,13 +151,13 @@
         <h4 style="color: white">My Designs</h4>
         <div class="design-img">
           <li>
+            <img src="images/e-poultry.png" alt="" />
+          </li>
+          <li>
             <img src="images/nft-web.png" alt="" />
           </li>
           <li>
             <img src="images/jemshop-app.png" alt="" />
-          </li>
-          <li>
-            <img src="images/tiktok-mockup.png" alt="" />
           </li>
           <li class="see-more">
             <a href="designs.html">
