--- a/show-case.html
+++ b/show-case.html
@@ -67,6 +67,14 @@
         <div class="img1 slide">
           <li class="js-scroll fade-in-bottom">
             <a
+              href="https://www.figma.com/community/file/1142313214246633640"
+              target="_blank"
+            >
+              <img src="images/e-poultry.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
+            <a
               href="https://www.figma.com/community/file/1133255596325295185"
               target="_blank"
             >
@@ -142,7 +150,10 @@
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
-            <a href="https://nhel-ez.github.io/TheLeoCars/index.html" target="_blank">
+            <a
+              href="https://nhel-ez.github.io/TheLeoCars/index.html"
+              target="_blank"
+            >
               <img src="images/the-leo-cars.png" alt="" class="zoom" />
             </a>
           </li>
