--- a/case-study.html
+++ b/case-study.html
@@ -72,7 +72,7 @@
           </li>
           <li class="slide js-scroll fade-in-bottom">
             <a href="rdro.html">
-              <img src="images/color-rdro-riders.webp" alt="" class="zoom" />
+              <img src="images/rdro.webp" alt="" class="zoom" />
             </a>
           </li>
         </div>
