--- a/about.html
+++ b/about.html
@@ -116,6 +116,7 @@
         <li><img src="images/bootstrap.webp" alt="" /></li>
         <li><img src="images/php.webp" alt="" /></li>
         <li><img src="images/mysql.webp" alt="" /></li>
+        <li><img src="images/firebase.webp" alt="" /></li>
       </div>
       <div class="footer slide">
         <center>
