--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 
     <div class="header-nav-content slide">
       <p>About me</p>
-      <h1>Frontend Web Developer and UI/UX Designer</h1>
+      <h1 class="linear-wipe">Frontend Web Developer and UI/UX Designer</h1>
     </div>
 
     <div class="intro slide">
