--- a/development.html
+++ b/development.html
@@ -59,7 +59,7 @@
     </div>
 
     <div class="header-nav-showcase slide">
-      <h1>Development</h1>
+      <h1 class="linear-wipe">Development</h1>
     </div>
 
     <div>
