--- a/dmis.html
+++ b/dmis.html
@@ -59,7 +59,7 @@
 
     <div class="header-case slide">
       <p>Overview</p>
-      <h1>DOST-FPRDI OD-PS Document Management Information System</h1>
+      <h1 class="linear-wipe">DOST-FPRDI OD-PS Document Management Information System</h1>
       <h6>DOST-FPRDI - Office of the Director - Planning Staff - Document
         Management Information System is a system project during the 300 hours
         on-the-job training. The system can store the incoming and outgoing
