--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="header slide">
       <p>Are you finding a modern designs for your business?</p>
-      <h1>Let's convert ideas into reality!</h1>
+      <h1 class="linear-wipe">Let's convert ideas into reality!</h1>
       <p class="js-scroll fade-in">Here's my recent projects:</p>
     </div>
 
