--- a/rdro.html
+++ b/rdro.html
@@ -59,7 +59,7 @@
 
     <div class="header-case slide">
       <p>Overview</p>
-      <h1>Rider's Delivery Route Optimization Using A* Algorithm</h1>
+      <h1 class="linear-wipe">Rider's Delivery Route Optimization Using A* Algorithm</h1>
       <h6>Rider's Delivery Route Optimization Using A* Algorithm is a thesis and
           system application that the delivery riders can find an efficient
           route from nearest up to the next nearest location and the logistics
