--- a/show-case.html
+++ b/show-case.html
@@ -59,7 +59,7 @@
     </div>
 
     <div class="header-nav-showcase slide">
-      <h1>Showcase</h1>
+      <h1 class="linear-wipe">Showcase</h1>
     </div>
 
     <div>
