--- a/case-study.html
+++ b/case-study.html
@@ -59,7 +59,7 @@
     </div>
 
     <div class="header-nav-showcase slide">
-      <h1>Case Studies</h1>
+      <h1 class="linear-wipe">Case Studies</h1>
     </div>
 
     <div>
