--- a/designs.html
+++ b/designs.html
@@ -59,7 +59,7 @@
     </div>
 
     <div class="header-nav-showcase slide">
-      <h1>Designs</h1>
+      <h1 class="linear-wipe">Designs</h1>
     </div>
 
     <div>
