--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
           Science in Computer Science. For the past four years of studying
           Computer Science, I was interested in the field of designing and
           developing websites and system. I love to see designs and I love to
-          convert my ideas into reality. I want pursue my career in designs and
+          convert my ideas into reality. I want to pursue my career in designs and
           development of websites and system and practice my skill in the
           industry.<br /><br />
           In my early experience as an On-The-Job Trainee when I am Senior High
