--- a/show-case.html
+++ b/show-case.html
@@ -67,6 +67,14 @@
         <div class="img1 slide">
           <li class="js-scroll fade-in-bottom">
             <a
+              href="https://www.figma.com/community/file/1144148521460916668"
+              target="_blank"
+            >
+              <img src="images/everyday-blog.webp" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
+            <a
               href="https://www.figma.com/community/file/1142636028024666544"
               target="_blank"
             >
