--- a/designs.html
+++ b/designs.html
@@ -67,6 +67,14 @@
         <div class="img1 slide">
           <li class="js-scroll fade-in-bottom">
             <a
+              href="https://www.figma.com/community/file/1144485467488218830"
+              target="_blank"
+            >
+              <img src="images/juan-coffee-shop.webp" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
+            <a
               href="https://www.figma.com/community/file/1144148521460916668"
               target="_blank"
             >
