--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
         <div class="img1">
           <li class="slide js-scroll fade-in-bottom">
             <a
+              href="https://www.figma.com/community/file/1146281021806104393"
+              target="_blank"
+            >
+              <img src="images/game-loop.webp" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="slide js-scroll fade-in-bottom">
+            <a
               href="https://www.figma.com/community/file/1144485467488218830"
               target="_blank"
             >
@@ -80,14 +88,6 @@
               target="_blank"
             >
               <img src="images/everyday-blog.webp" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="slide js-scroll fade-in-bottom">
-            <a
-              href="https://www.figma.com/community/file/1142636028024666544"
-              target="_blank"
-            >
-              <img src="images/e-pay.webp" alt="" class="zoom" />
             </a>
           </li>
 
@@ -151,13 +151,13 @@
         <h4 style="color: white">My Designs</h4>
         <div class="design-img">
           <li>
+            <img src="images/game-loop.webp" alt="" />
+          </li>
+          <li>
             <img src="images/juan-coffee-shop.webp" alt="" />
           </li>
           <li>
             <img src="images/everyday-blog.webp" alt="" />
-          </li>
-          <li>
-            <img src="images/e-pay.webp" alt="" />
           </li>
           <li class="see-more">
             <a href="designs.html">
