--- a/show-case.html
+++ b/show-case.html
@@ -67,6 +67,14 @@
         <div class="img1 slide">
           <li class="js-scroll fade-in-bottom">
             <a
+              href="https://www.figma.com/community/file/1146281021806104393"
+              target="_blank"
+            >
+              <img src="images/game-loop.webp" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
+            <a
               href="https://www.figma.com/community/file/1144485467488218830"
               target="_blank"
             >
