--- a/dmis.html
+++ b/dmis.html
@@ -3,7 +3,7 @@
   <link
     rel="icon"
     type="image/webp"
-    href="images/Personal Website-Advance Logo.webp"
+    href="images/Personal Website-Advance Logo.svg"
   />
   <title>DMIS</title>
   <meta charset="utf-8" />
@@ -19,7 +19,7 @@
     <div class="header">
       <li class="logo">
         <a href="index.html">
-          <img src="images/Personal Website-Advance Logo.webp" alt="logo" />
+          <img src="images/Personal Website-Advance Logo.svg" alt="logo" />
         </a>
       </li>
       <li class="author-name">
@@ -58,8 +58,8 @@
     </div>
 
     <div class="header-case slide">
-      <p>Overview</p>
-      <h1 class="linear-wipe">DOST-FPRDI OD-PS Document Management Information System</h1>
+      <p style="margin-bottom: 20px;">Overview</p>
+      <h1 style="margin-bottom: 20px;">DOST-FPRDI OD-PS Document Management Information System</h1>
       <h6>DOST-FPRDI - Office of the Director - Planning Staff - Document
         Management Information System is a system project during the 300 hours
         on-the-job training. The system can store the incoming and outgoing
@@ -69,7 +69,7 @@
     </div>
 
     <center>
-      <div class="header-full slide js-scroll fade-in-bottom">
+      <div class="header-full slide js-scroll fade-in-bottom" style="margin-top: 100px;">
         <img src="images/dmis-case.webp" alt="" class="zoom" />
       </div>
     </center>
@@ -131,6 +131,10 @@
         </li>
       </div>
     </center>
+
+    <div
+      style="border: 1px solid white; margin-top: 100px; margin-bottom: 100px"
+    ></div>
     
     <div class="footer slide">
         <center>
