--- a/rdro.html
+++ b/rdro.html
@@ -3,7 +3,7 @@
   <link
     rel="icon"
     type="image/webp"
-    href="images/Personal Website-Advance Logo.webp"
+    href="images/Personal Website-Advance Logo.svg"
   />
   <title>RDRO</title>
   <meta charset="utf-8" />
@@ -19,7 +19,7 @@
     <div class="header">
       <li class="logo">
         <a href="index.html">
-          <img src="images/Personal Website-Advance Logo.webp" alt="logo" />
+          <img src="images/Personal Website-Advance Logo.svg" alt="logo" />
         </a>
       </li>
       <li class="author-name">
@@ -58,9 +58,9 @@
     </div>
 
     <div class="header-case slide">
-      <p>Overview</p>
-      <h1 class="linear-wipe">Rider's Delivery Route Optimization Using A* Algorithm</h1>
-      <h6>Rider's Delivery Route Optimization Using A* Algorithm is a thesis and
+      <p style="margin-bottom: 20px;">Overview</p>
+      <h1 style="margin-bottom: 20px;">Rider's Delivery Route Optimization Using A* Algorithm</h1>
+      <h6 >Rider's Delivery Route Optimization Using A* Algorithm is a thesis and
           system application that the delivery riders can find an efficient
           route from nearest up to the next nearest location and the logistics
           company administrator can track and monitor the location of the
@@ -69,7 +69,7 @@
     </div>
 
     <center>
-      <div class="header-full slide js-scroll fade-in-bottom">
+      <div class="header-full slide js-scroll fade-in-bottom" style="margin-top: 100px;">
         <img src="images/rdro-blue.webp" alt="" class="zoom" />
       </div>
       <div class="header-full slide js-scroll fade-in-bottom">
@@ -141,6 +141,10 @@
         </li>
       </div>
     </center>
+
+    <div
+      style="border: 1px solid white; margin-top: 100px; margin-bottom: 100px"
+    ></div>
     
     <div class="footer slide">
         <center>
