--- a/show-case.html
+++ b/show-case.html
@@ -3,7 +3,7 @@
   <link
     rel="icon"
     type="image/webp"
-    href="images/Personal Website-Advance Logo.webp"
+    href="images/Personal Website-Advance Logo.svg"
   />
   <title>Showcase | Leonel Esguerra</title>
   <meta charset="utf-8" />
@@ -19,7 +19,7 @@
     <div class="header">
       <li class="logo">
         <a href="index.html">
-          <img src="images/Personal Website-Advance Logo.webp" alt="logo" />
+          <img src="images/Personal Website-Advance Logo.svg" alt="logo" />
         </a>
       </li>
 
@@ -59,7 +59,7 @@
     </div>
 
     <div class="header-nav-showcase slide">
-      <h1 class="linear-wipe">Showcase</h1>
+      <h1 style="margin-bottom: 40px">Showcase</h1>
     </div>
 
     <div>
@@ -192,6 +192,10 @@
         </div>
       </center>
     </div>
+
+    <div
+      style="border: 1px solid white; margin-top: 100px; margin-bottom: 100px"
+    ></div>
 
     <div class="footer slide">
       <center>
