--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <link
     rel="icon"
     type="image/webp"
-    href="images/Personal Website-Advance Logo.webp"
+    href="images/Personal Website-Advance Logo.svg"
   />
   <title>About | Leonel Esguerra</title>
   <meta charset="utf-8" />
@@ -19,7 +19,7 @@
     <div class="header">
       <li class="logo">
         <a href="index.html">
-          <img src="images/Personal Website-Advance Logo.webp" alt="logo" />
+          <img src="images/Personal Website-Advance Logo.svg" alt="logo" />
         </a>
       </li>
 
@@ -78,8 +78,8 @@
           Science in Computer Science. For the past four years of studying
           Computer Science, I was interested in the field of designing and
           developing websites and system. I love to see designs and I love to
-          convert my ideas into reality. I want to pursue my career in designs and
-          development of websites and system and practice my skill in the
+          convert my ideas into reality. I want to pursue my career in designs
+          and development of websites and system and practice my skill in the
           industry.<br /><br />
           In my early experience as an On-The-Job Trainee when I am Senior High
           School and College and, I was involved in communicating with different
@@ -99,7 +99,7 @@
         <li><img src="images/figma.webp" alt="" /></li>
         <li><img src="images/canva.webp" alt="" /></li>
         <li><img src="images/vscode.webp" alt="" /></li>
-        <li><img src="images/github.webp" alt="" /></li>
+        <li><img src="images/github-white.webp" alt="" /></li>
         <li><img src="images/xampp.webp" alt="" /></li>
         <li><img src="images/phpmyadmin.webp" alt="" /></li>
       </div>
@@ -118,6 +118,10 @@
         <li><img src="images/mysql.webp" alt="" /></li>
         <li><img src="images/firebase.webp" alt="" /></li>
       </div>
+
+      <div
+        style="border: 1px solid white; margin-top: 100px; margin-bottom: 100px"
+      ></div>
       <div class="footer slide">
         <center>
           <h2>Let's Connect</h2>
