--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             margin-bottom: 50px;
           "
         >
-          My recent projects
+          Recent projects
         </h1>
         <div class="img1">
           <li class="slide js-scroll fade-in-bottom">
