--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </p>
             <div
               class="slide js-scroll fade-in"
-              style="float: left; margin-left: 20px"
+              style="float: left; margin-left: 20px; margin-top: 20px;"
             >
               <a href="about.html" style="text-decoration: none">
                 <button class="btn-grad">Learn More About Me!</button>
