--- a/show-case.html
+++ b/show-case.html
@@ -66,6 +66,12 @@
       <center>
         <div class="img1 slide">
           <li class="js-scroll fade-in-bottom">
+            <img src="images/coin-world.png" alt="" class="zoom" />
+          </li>
+          <li class="js-scroll fade-in-bottom">
+            <img src="images/rdro.png" alt="" class="zoom" />
+          </li>
+          <li class="js-scroll fade-in-bottom">
             <a
               href="https://www.figma.com/community/file/1146281021806104393"
               target="_blank"
@@ -142,11 +148,6 @@
           <li class="js-scroll fade-in-bottom">
             <a href="dmis.html">
               <img src="images/dmis.webp" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="js-scroll fade-in-bottom">
-            <a href="rdro.html">
-              <img src="images/rdro.webp" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
