--- a/show-case.html
+++ b/show-case.html
@@ -69,7 +69,9 @@
             <img src="images/coin-world.png" alt="" class="zoom" />
           </li>
           <li class="js-scroll fade-in-bottom">
-            <img src="images/rdro.png" alt="" class="zoom" />
+            <a href="rdro.html">
+              <img src="images/rdro.png" alt="" class="zoom" />
+            </a>
           </li>
           <li class="js-scroll fade-in-bottom">
             <a
