--- a/rdro.html
+++ b/rdro.html
@@ -57,23 +57,18 @@
       </li>
     </div>
 
-    <div class="header-case slide">
-      <p style="margin-bottom: 20px;">Overview</p>
-      <h1 style="margin-bottom: 20px;">Rider's Delivery Route Optimization Using A* Algorithm</h1>
-      <h6 >Rider's Delivery Route Optimization Using A* Algorithm is a thesis and
-          system application that the delivery riders can find an efficient
-          route from nearest up to the next nearest location and the logistics
+    <center>
+      <div class="header-case slide">
+        <h1 style="margin-bottom: 20px;">Rider's Delivery Route Optimization Using A* Algorithm</h1>
+        <h6>Rider's Delivery Route Optimization Using A* Algorithm is a thesis and system application that the<br>
+          delivery riders can find an efficient route from nearest up to the next nearest location and the logistics<br>
           company administrator can track and monitor the location of the
           delivery during working hours.
-      </h6>
-    </div>
-
-    <center>
-      <div class="header-full slide js-scroll fade-in-bottom" style="margin-top: 100px;">
-        <img src="images/rdro-blue.webp" alt="" class="zoom" />
+        </h6>
       </div>
-      <div class="header-full slide js-scroll fade-in-bottom">
-        <img src="images/rdro-red.webp" alt="" class="zoom" />
+
+      <div class="header-full slide js-scroll fade-in-bottom" style="margin-top: 100px;">
+        <img src="images/rdro1.png" alt="" class="zoom" />
       </div>
     </center>
     
