--- a/rdro.html
+++ b/rdro.html
@@ -60,8 +60,8 @@
     <center>
       <div class="header-case slide">
         <h1 style="margin-bottom: 20px;">Rider's Delivery Route Optimization Using A* Algorithm</h1>
-        <h6>Rider's Delivery Route Optimization Using A* Algorithm is a thesis and system application that the<br>
-          delivery riders can find an efficient route from nearest up to the next nearest location and the logistics<br>
+        <h6>Rider's Delivery Route Optimization Using A* Algorithm is a thesis and system application that the
+          delivery riders can find an efficient route from nearest up to the next nearest location and the logistics
           company administrator can track and monitor the location of the
           delivery during working hours.
         </h6>
