--- a/development.html
+++ b/development.html
@@ -82,7 +82,7 @@
           </li>
           <li class="js-scroll fade-in-bottom">
             <a href="rdro.html">
-              <img src="images/rdro.webp" alt="" class="zoom" />
+              <img src="images/rdro.png" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
