--- a/index.html
+++ b/index.html
@@ -112,27 +112,14 @@
         </h1>
         <div class="img1">
           <li class="slide js-scroll fade-in-bottom">
-            <a
-              href="https://www.figma.com/community/file/1146281021806104393"
-              target="_blank"
-            >
-              <img src="images/game-loop.webp" alt="" class="zoom" />
-            </a>
+              <img src="images/coin-world.png" alt="" class="zoom" />
           </li>
           <li class="slide js-scroll fade-in-bottom">
             <a
-              href="https://www.figma.com/community/file/1144485467488218830"
-              target="_blank"
+              href="rdro.html"
+
             >
-              <img src="images/juan-coffee-shop.webp" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="slide js-scroll fade-in-bottom">
-            <a
-              href="https://www.figma.com/community/file/1144148521460916668"
-              target="_blank"
-            >
-              <img src="images/everyday-blog.webp" alt="" class="zoom" />
+              <img src="images/rdro.png" alt="" class="zoom" />
             </a>
           </li>
 
