--- a/designs.html
+++ b/designs.html
@@ -66,6 +66,9 @@
       <center>
         <div class="img1 slide">
           <li class="js-scroll fade-in-bottom">
+            <img src="images/coin-world.png" alt="" class="zoom" />
+          </li>
+          <li class="js-scroll fade-in-bottom">
             <a
               href="https://www.figma.com/community/file/1146281021806104393"
               target="_blank"
@@ -210,7 +213,7 @@
           </li>
         </div>
         <p style="font-size: 12px">
-          Copyright © 2022 Leonel Esguerra. All right reserved.
+          Copyright © 2023 Leonel Esguerra. All right reserved.
         </p>
       </center>
     </div>
