--- a/case-study.html
+++ b/case-study.html
@@ -67,7 +67,7 @@
         <div class="img1 slide">
           <li class="slide js-scroll fade-in-bottom">
             <a href="dmis.html">
-              <img src="images/dmis.webp" alt="" class="zoom" />
+              <img src="images/dmis.png" alt="" class="zoom" />
             </a>
           </li>
           <li class="slide js-scroll fade-in-bottom">
