--- a/designs.html
+++ b/designs.html
@@ -133,8 +133,8 @@
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
-            <a href="https://www.figma.com/community/file/1114921249053475523">
-              <img src="images/dmis.webp" alt="" class="zoom" />
+            <a href="dmis.html">
+              <img src="images/dmis.png" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
