--- a/dmis.html
+++ b/dmis.html
@@ -57,8 +57,8 @@
       </li>
     </div>
 
-    <div class="header-case slide">
-      <p style="margin-bottom: 20px;">Overview</p>
+    <center>
+      <div class="header-case slide">
       <h1 style="margin-bottom: 20px;">DOST-FPRDI OD-PS Document Management Information System</h1>
       <h6>DOST-FPRDI - Office of the Director - Planning Staff - Document
         Management Information System is a system project during the 300 hours
@@ -68,9 +68,8 @@
       </h6>
     </div>
 
-    <center>
       <div class="header-full slide js-scroll fade-in-bottom" style="margin-top: 100px;">
-        <img src="images/dmis-case.webp" alt="" class="zoom" />
+        <img src="images/dmis-case.png" alt="" class="zoom" />
       </div>
     </center>
     
