--- a/show-case.html
+++ b/show-case.html
@@ -149,7 +149,7 @@
           </li>
           <li class="js-scroll fade-in-bottom">
             <a href="dmis.html">
-              <img src="images/dmis.webp" alt="" class="zoom" />
+              <img src="images/dmis.png" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
