--- a/index.html
+++ b/index.html
@@ -115,11 +115,13 @@
               <img src="images/coin-world.png" alt="" class="zoom" />
           </li>
           <li class="slide js-scroll fade-in-bottom">
-            <a
-              href="rdro.html"
-
-            >
+            <a href="rdro.html">
               <img src="images/rdro.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="slide js-scroll fade-in-bottom">
+            <a href="dmis.html">
+              <img src="images/dmis.png" alt="" class="zoom" />
             </a>
           </li>
 
