--- a/designs.html
+++ b/designs.html
@@ -69,6 +69,16 @@
             <img src="images/coin-world.png" alt="" class="zoom" />
           </li>
           <li class="js-scroll fade-in-bottom">
+            <a href="rdro.html">
+              <img src="images/rdro.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
+            <a href="dmis.html">
+              <img src="images/dmis.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
             <a
               href="https://www.figma.com/community/file/1146281021806104393"
               target="_blank"
@@ -133,11 +143,6 @@
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
-            <a href="dmis.html">
-              <img src="images/dmis.png" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="js-scroll fade-in-bottom">
             <a href="https://www.figma.com/community/file/1069145923032887684">
               <img src="images/rdro.webp" alt="" class="zoom" />
             </a>
@@ -171,7 +176,7 @@
     </div>
 
     <div
-      style="border: 1px solid white; margin-top: 100px; margin-bottom: 100px"
+      style="border: 1px solid white; margin-top: 100px; margin-bottom: 80px; opacity: 40%;"
     ></div>
 
     <div class="footer slide">
