--- a/development.html
+++ b/development.html
@@ -106,7 +106,7 @@
     </div>
 
     <div
-      style="border: 1px solid white; margin-top: 100px; margin-bottom: 100px"
+      style="border: 1px solid white; margin-top: 100px; margin-bottom: 80px; opacity: 40%;"
     ></div>
 
     <div class="footer slide">
