--- a/show-case.html
+++ b/show-case.html
@@ -66,11 +66,21 @@
       <center>
         <div class="img1 slide">
           <li class="js-scroll fade-in-bottom">
+            <a
+              href="https://www.behance.net/gallery/161829513/Coin-World-Cryptocurrency-UIUX-Mockups"
+              target="_blank"
+            >
             <img src="images/coin-world.png" alt="" class="zoom" />
+            </a>
           </li>
           <li class="js-scroll fade-in-bottom">
             <a href="rdro.html">
               <img src="images/rdro.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
+            <a href="dmis.html">
+              <img src="images/dmis.png" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
@@ -148,11 +158,6 @@
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
-            <a href="dmis.html">
-              <img src="images/dmis.png" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="js-scroll fade-in-bottom">
             <a
               href="https://www.figma.com/community/file/1069146567302323589"
               target="_blank"
@@ -197,7 +202,7 @@
     </div>
 
     <div
-      style="border: 1px solid white; margin-top: 100px; margin-bottom: 100px"
+      style="border: 1px solid white; margin-top: 100px; margin-bottom: 80px; opacity: 40%;"
     ></div>
 
     <div class="footer slide">
