--- a/about.html
+++ b/about.html
@@ -57,22 +57,21 @@
       </li>
     </div>
 
-    <div class="header-nav-content slide">
-      <p>About me</p>
-      <h1 class="linear-wipe">Frontend Web Developer and UI/UX Designer</h1>
-    </div>
+    <center>
+      <div class="header-nav-content slide">
+        <p>Hi I am Leonel Esguerra and I am</p>
+        <h1 class="linear-wipe">Frontend Web <span class="gradient-text">Developer</span> and UI/UX <span class="gradient-text">Designer</span></h1>
+      </div>
+    </center>
 
     <div class="intro slide">
-      <p>Hi I am</p>
-      <h1 style="font-weight: 700">Leonel Esguerra</h1>
-
       <section class="scroll-container">
         <img
           src="images/profile-pic.webp"
           alt=""
           class="scroll-element js-scroll slide-left"
         />
-        <span class="scroll-caption scroll-element js-scroll fade-in">
+        <span class="scroll-caption scroll-element js-scroll fade-in" style="color: gray; font-weight: 50;">
           <br /><br />
           I currently live here in Laguna, Philippines. I studied Bachelor of
           Science in Computer Science. For the past four years of studying
@@ -113,7 +112,9 @@
         </span>
       </section>
 
-      <p class="js-scroll fade-in" style="font-weight: 700">FAVORITE TOOLS</p>
+      <center>
+      <div style="margin-top: 60px;">
+      <p class="js-scroll fade-in" style="font-weight: 700; margin-bottom: 20px;">FAVORITE TOOLS</p>
       <div class="img2 js-scroll fade-in">
         <li><img src="images/figma.webp" alt="" /></li>
         <li><img src="images/canva.webp" alt="" /></li>
@@ -124,7 +125,7 @@
         <li><img src="images/xampp.webp" alt="" /></li>
         <li><img src="images/phpmyadmin.webp" alt="" /></li>
       </div>
-      <p class="js-scroll fade-in" style="font-weight: 700">
+      <p class="js-scroll fade-in" style="font-weight: 700; margin-bottom: 20px;">
         FAVORITE WEB DEVELOPMENT LANGUAGES, FRAMEWORKS AND DATABASES
       </p>
       <div class="img2 js-scroll fade-in">
@@ -139,10 +140,13 @@
         <li><img src="images/mysql.webp" alt="" /></li>
         <li><img src="images/firebase.webp" alt="" /></li>
       </div>
+      </div>
+      </center>
 
       <div
-        style="border: 1px solid white; margin-top: 100px; margin-bottom: 100px"
-      ></div>
+      style="border: 1px solid white; margin-top: 100px; margin-bottom: 80px; opacity: 40%;"
+    ></div>
+
       <div class="footer slide">
         <center>
           <h2>Let's Connect</h2>
