--- a/dmis.html
+++ b/dmis.html
@@ -132,7 +132,7 @@
     </center>
 
     <div
-      style="border: 1px solid white; margin-top: 100px; margin-bottom: 100px"
+      style="border: 1px solid white; margin-top: 100px; margin-bottom: 80px; opacity: 40%;"
     ></div>
     
     <div class="footer slide">
