--- a/index.html
+++ b/index.html
@@ -60,21 +60,17 @@
     <div class="header slide" style="margin-top: 50px">
       <center>
         <section class="scroll-container">
-          <span class="scroll-caption scroll-element js-scroll fade-in">
-            <p style="text-align: left; color: white; opacity: 50%;">
-              Are you finding a modern designs for your business?
-            </p>
-            <h1 style="text-align: left">
-              Let's convert ideas into
+          <span class="scroll-caption scroll-element js-scroll fade-in" style="margin-top: 100px;">
+            <h1>
+              Let's convert ideas <br /> into
               <span class="gradient-text">reality!</span>
             </h1>
-            <p style="text-align: left">
+            <p>
               I can help you with UI design, UX design, UX research, Wordpress
               design, game design, and web development.
             </p>
             <div
-              class="slide js-scroll fade-in"
-              style="float: left; margin-left: 20px; margin-top: 20px;"
+              class="cta slide js-scroll fade-in"
             >
               <a href="about.html" style="text-decoration: none">
                 <button class="btn-grad">Learn More About Me!</button>
@@ -83,9 +79,9 @@
           </span>
           <span class="scroll-caption scroll-element js-scroll fade-in">
             <img
-              src="images/Hero Image.svg"
+              src="images/hero-image.png"
               alt=""
-              class="scroll-element js-scroll slide-left"
+              class="hero scroll-element js-scroll slide-left"
             />
           </span>
         </section>
