--- a/index.html
+++ b/index.html
@@ -107,12 +107,14 @@
         <h6 class="sub-text">I recently working in UI/UX design and web development project for a my portfolio. The project involved creating a user-friendly interface and optimizing the website for all devices, resulting in a successful end product that met the client's needs.
         </h6>
         <div class="img1">
-          <a
+          <li class="js-scroll fade-in-bottom">
+            <a
               href="https://www.behance.net/gallery/161829513/Coin-World-Cryptocurrency-UIUX-Mockups"
               target="_blank"
             >
             <img src="images/coin-world.png" alt="" class="zoom" />
             </a>
+          </li>
           <li class="slide js-scroll fade-in-bottom">
             <a href="rdro.html">
               <img src="images/rdro.png" alt="" class="zoom" />
