--- a/designs.html
+++ b/designs.html
@@ -66,7 +66,12 @@
       <center>
         <div class="img1 slide">
           <li class="js-scroll fade-in-bottom">
+            <a
+              href="https://www.behance.net/gallery/161829513/Coin-World-Cryptocurrency-UIUX-Mockups"
+              target="_blank"
+            >
             <img src="images/coin-world.png" alt="" class="zoom" />
+            </a>
           </li>
           <li class="js-scroll fade-in-bottom">
             <a href="rdro.html">
